# hotel-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  PITFALLS.md  README.md  config.example.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  release.yml
assets/: gen_icons.py  icon.icns
data/: scheduler_state.json
src/hotel_agent/: cli.py  config.py  db.py  launcher.py  logging_setup.py  models.py  pipeline.py  scheduler.py  utils.py
src/hotel_agent/analysis/: comparator.py
src/hotel_agent/api/: serpapi_client.py
src/hotel_agent/llm/: client.py  excel_parser.py  hotel_matcher.py
src/hotel_agent/notifications/: email.py  telegram.py
src/hotel_agent/web/: app.py
src/hotel_agent/web/templates/: _macros.html  alerts.html  base.html  booking_edit.html  bookings.html  check.html  config_edit.html  dashboard.html  hotels.html  import.html  scheduler.html  scrape.html  scrape_detail.html  scrapes.html  setup.html  snapshot_detail.html  snapshots.html  trends.html
tests/: conftest.py  test_comparator.py  test_config.py  test_db.py  test_email.py  test_excel_parser.py  test_hotel_matcher.py  test_launcher.py  test_models.py  test_pipeline.py  test_scheduler.py  test_serpapi.py  test_setup.py  test_telegram.py  test_web.py
